--- a/sass/_trumps.widths-responsive.scss
+++ b/sass/_trumps.widths-responsive.scss
@@ -1,12 +1,16 @@
 /*------------------------------------*\
-    #WIDTHS-RESPONSIVE
+    #PX-WIDTHS-RESPONSIVE-DESIGN
 \*------------------------------------*/
 
 /**
  * Responsive width classes based on your responsive settings.
  */
 
+@import "inuit-defaults/settings.defaults";
+@import "inuit-responsive-settings/responsive.defaults";
 @import "px-functions-design/sass/tools.functions";
+@import "inuit-responsive-tools/tools.responsive";
+@import "px-widths-design/sass/trumps.widths";
 
 @if import-once('trumps.widths-responsive') {
 
