Corrected sass path

--- a/sass/_trumps.widths-responsive.scss
+++ b/sass/_trumps.widths-responsive.scss
@@ -7,7 +7,7 @@
  */
 
 @import "inuit-defaults/settings.defaults";
-@import "inuit-responsive-settings/responsive.defaults";
+@import "inuit-responsive-settings/settings.responsive";
 @import "px-functions-design/sass/tools.functions";
 @import "inuit-responsive-tools/tools.responsive";
 @import "px-widths-design/sass/trumps.widths";
