--- a/_trumps.widths-responsive.scss
+++ b/_trumps.widths-responsive.scss
@@ -4,9 +4,9 @@
 /// @group px-widths-responsive-design
 ////
 
-@import "../inuit-responsive-settings/settings.responsive";
-@import "../inuit-responsive-tools/tools.responsive";
-@import "../px-widths-design/trumps.widths";
+@import "inuit-responsive-settings/_settings.responsive.scss";
+@import "inuit-responsive-tools/_tools.responsive.scss";
+@import "px-widths-design/_trumps.widths.scss";
 
 /// @type List [default] - By default we will create wholes, halves, thirds, quarters, and sixths. Predefine this Map to override.
 $inuit-widths-columns-responsive: (
@@ -17,24 +17,20 @@ $inuit-widths-columns-responsive: (
     6,
 ) !default;
 
-@if import-once('trumps.widths-responsive') {
+// Loop over our breakpoints defined in _settings.responsive.scss
+@each $breakpoint in $breakpoints {
 
-  // Loop over our breakpoints defined in _settings.responsive.scss
-  @each $breakpoint in $breakpoints {
-  
-    // Get the name of the breakpoint.
-    $alias: nth($breakpoint, 1);
-  
-    @include media-query($alias) {
-  
-      // Loop through each of our column sizes and generate its responsive width
-      // classes.
-      @each $inuit-widths-column in $inuit-widths-columns-responsive {
-        @include inuit-widths($inuit-widths-column, -#{$alias});
-      }
-  
+  // Get the name of the breakpoint.
+  $alias: nth($breakpoint, 1);
+
+  @include media-query($alias) {
+
+    // Loop through each of our column sizes and generate its responsive width
+    // classes.
+    @each $inuit-widths-column in $inuit-widths-columns-responsive {
+      @include inuit-widths($inuit-widths-column, -#{$alias});
     }
-  
+
   }
 
 }
