Pick up redesigned dependencies

--- a/sass/px-widths-responsive-design-demo.scss
+++ b/sass/px-widths-responsive-design-demo.scss
@@ -34,7 +34,7 @@ PAGE. IT SHOULD NOT PROVIDE RULES FOR THE MODULE.
 // Component
 section[data-slot="demoHTML"] div {
   height: $inuit-base-spacing-unit * 3;
-  background-color: var(--px-width-demo-box-color, $orange);
+  background-color: var(--px-width-demo-box-color, $salmon2);
   text-align: center;
   line-height: $inuit-base-spacing-unit * 3;
   font-size: $inuit-base-font-size;
