remove inuit responsive

--- a/_trumps.widths-responsive.scss
+++ b/_trumps.widths-responsive.scss
@@ -4,13 +4,13 @@
 /// @group px-widths-responsive-design
 ////
 
-@import "inuit-responsive-settings/_settings.responsive.scss";
-@import "inuit-responsive-tools/_tools.responsive.scss";
+@import "px-helpers-design/_generic.helpers.scss";
 @import "px-widths-design/_trumps.widths.scss";
 
 /// By default we will create wholes, halves, thirds, quarters, and sixths. Predefine this Map to override.
 /// @group px-widths-responsive-design:variables:style
 /// @type List [default]
+/// @todo n/a
 $inuit-widths-columns-responsive: (
     1,
     2,
@@ -21,18 +21,13 @@ $inuit-widths-columns-responsive: (
 
 // Loop over our breakpoints defined in _settings.responsive.scss
 @each $breakpoint in $breakpoints {
-
   // Get the name of the breakpoint.
   $alias: nth($breakpoint, 1);
-
   @include media-query($alias) {
-
     // Loop through each of our column sizes and generate its responsive width
     // classes.
     @each $inuit-widths-column in $inuit-widths-columns-responsive {
       @include inuit-widths($inuit-widths-column, -#{$alias});
     }
-
   }
-
 }
